--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 Steps to use the alarm:
 
-* Create virtual environment
+1. Create virtual environment
 	# python3 -m venv venv
 	# source venv/bin/activate
 	# pip install -r requirements.txt
 
-* Use: 
+2. Use: 
 	# ./pyAlarm.py <ALARM_TIME>
 		ALARM_TIME format: HH:MM:SS (24hs format)
